// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChannelNamePanel/> spec renders errors 1`] = `
<div
  style="max-width: 700px;"
>
  <div
    class="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
    id="random_html_id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid="true"
        class="euiFormLabel euiFormRow__label euiFormLabel-isInvalid"
        for="random_html_id"
      >
        Name
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-describedby="random_html_id-error-0"
            class="euiFieldText euiFieldText--fullWidth euiFieldText--compressed"
            data-test-subj="create-channel-name-input"
            id="random_html_id"
            placeholder="Enter active response name"
            type="text"
            value="test"
          />
        </div>
      </div>
      <div
        aria-live="polite"
        class="euiFormErrorText euiFormRow__text"
        id="random_html_id-error-0"
      >
        test error
      </div>
    </div>
  </div>
  <div
    class="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
    id="random_html_id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label"
        for="random_html_id"
      >
        <span>
          Description - 
          <i
            style="font-weight: normal;"
          >
            optional
          </i>
        </span>
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <textarea
        class="euiTextArea euiTextArea--resizeVertical euiTextArea--fullWidth euiTextArea--compressed"
        data-test-subj="create-channel-description-input"
        placeholder="What is the purpose of this active response?"
        rows="3"
        style="height: 4.1rem;"
      >
        test description
      </textarea>
    </div>
  </div>
</div>
`;

exports[`<ChannelNamePanel/> spec renders the component 1`] = `
<div
  style="max-width: 700px;"
>
  <div
    class="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
    id="random_html_id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid="false"
        class="euiFormLabel euiFormRow__label"
        for="random_html_id"
      >
        Name
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <input
            class="euiFieldText euiFieldText--fullWidth euiFieldText--compressed"
            data-test-subj="create-channel-name-input"
            id="random_html_id"
            placeholder="Enter active response name"
            type="text"
            value="test"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
    id="random_html_id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        class="euiFormLabel euiFormRow__label"
        for="random_html_id"
      >
        <span>
          Description - 
          <i
            style="font-weight: normal;"
          >
            optional
          </i>
        </span>
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <textarea
        class="euiTextArea euiTextArea--resizeVertical euiTextArea--fullWidth euiTextArea--compressed"
        data-test-subj="create-channel-description-input"
        placeholder="What is the purpose of this active response?"
        rows="3"
        style="height: 4.1rem;"
      >
        test description
      </textarea>
    </div>
  </div>
</div>
`;
